--- a/style.css
+++ b/style.css
@@ -4,14 +4,17 @@
 html, body{  
     margin: 0;
     padding: 0;
+    height: 100vh;
 }
+
+/* Main */ 
+
 .container{
     position: relative;
     width: 90%;
-    height: 100vh;
+    height: 100%;
     margin: auto;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -20,18 +23,44 @@ html, body{
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
-.col{
+.col-100{
     width: 100%;
+    display: flex;
     text-align: center;
+    margin: auto;
     flex-direction: column;
+    align-items: center;
 }
-.col:first-child{
-    padding-right: 5px;
+.col-50{
+    width: 50%;
+    display: flex;
+    text-align: center;
+    margin: auto;
+    flex-direction: column;
+    align-items: center;
 }
-.col:last-child{
-    padding-left: 5px;
+.opacity-20{
+    opacity: 0.2;
+    transition: opacity 1s;
 }
+
+/* Animations */
+
+.blink{
+    animation-name: blink;
+    animation-duration: 0.8s;
+    animation-iteration-count: infinite;
+}
+@keyframes blink {
+    0%   {opacity: 1;}
+    50%  {opacity: 0;}
+    100% {opacity: 1;}
+  }
+
+/* Rest colors */
 
 .body-bg-rest{
     background-color: #a5c0f3;
@@ -55,6 +84,7 @@ html, body{
     transition: background-color 1s;
 }
 
+/* Train colors */
 
 .body-bg-train{
     background-color: #cc4747;
@@ -77,9 +107,12 @@ html, body{
     background-color: #be0b0b4d;
     transition: background-color 1s;
 }
+
+
 #title{
+    width: 100%;
     font-size: 10vw;
-    padding: 10px;
+    padding: 2vh 0px;
     margin: 0;
     font-family: 'Roboto';
     color: #fff;
@@ -93,26 +126,25 @@ html, body{
     font-family: 'Roboto';
     color: #000;
 }
-.opacity-20{
-    opacity: 0.2;
-    transition: opacity 1s;
-}
-.semicolon{
-    transition: opacity 1s;
-}
 #countdown-container{
+    width: 100%;
     justify-content: center;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
 }
 #countdown{
     display: block;
     font-family: 'Squada One';
     font-size: 25vw;
-    padding-bottom: 40px;
+    padding-bottom: 3vh;
 }
+
+.semicolon{
+    transition: opacity 1s;
+}
+
 .inputs-container{
     color: #000;
     font-size: 15vw;
@@ -122,15 +154,6 @@ html, body{
     color: #000;
     font-size: 15vw;
     transition: color 1s;
-}
-.inputs-container input:first-child{
-    text-align: right;
-}
-.inputs-container input:last-child{
-    text-align: left;
-    direction: rtl;
-}
-input {
     border: 0;
     outline: 0;
     background-color: transparent;
@@ -140,6 +163,23 @@ input {
     padding: 0;
     width: 35%;
 }
+.inputs-container input:first-child{
+    text-align: right;
+}
+.inputs-container input:last-child{
+    text-align: left;
+    direction: rtl;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 input:disabled{
     color: #00000033;
     transition: color 1s;
@@ -147,16 +187,7 @@ input:disabled{
 input::placeholder{
     color: #00000033;
 }
-.blink{
-    animation-name: blink;
-    animation-duration: 0.8s;
-    animation-iteration-count: infinite;
-}
-@keyframes blink {
-    0%   {opacity: 1;}
-    50%  {opacity: 0;}
-    100% {opacity: 1;}
-  }
+
 #icons{
     margin-top: 50px;
 }
@@ -181,43 +212,30 @@ button i{
 /* Media queries (mobile first) */
 
 @media (min-width: 380px){
-    button{
-        max-width: 120px;
-    }
-    #countdown{
-        font-size: 100px;
-    }
-    .inputs-container{
-        font-size: 72px;
-    }
-    .inputs-container input{
-        font-size: 72px;
-    }
-    #title{
-        font-size: 40px;
-    }
-    .settings-title{
-        font-size: 32px;
-    }
+  .container{
+      width: 360px;
+  }
+  #title{
+      font-size: 36px;
+  }
+  #countdown{
+      font-size: 100px;
+  }
+  .settings-title{
+      font-size: 32px;
+  }
+  .inputs-container input, .semicolon{
+      font-size: 56px;
+  }
+  button i{
+      font-size: 100px;
+  }
+  button{
+      margin: 0 5px;
+  }
 }
-
-@media (min-width: 480px){
-    button i{
-        font-size: 120px;
+ @media (max-height: 480px) and (orientation: landscape){
+    html, body{
+        height: 100vw;
     }
-}
-
-@media (min-width: 769px){
-    .col{
-        width: 50%;
-    }
-}
-
-@media (min-width: 1025px){
-    .col{
-        max-width: 475px;
-    }
-    button{
-        margin: 0 12px;
-    }
-}
+ }
